kind/istio-misc/jaeger-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
spec:
  hosts:
  - jaeger.muchk8s.wow
  gateways:
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jaeger
spec:
  host: tracing.istio-system.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
