kind/istio-misc/kiali-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
  - kiali.muchk8s.wow
  gateways:
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
spec:
  host: kiali.istio-system.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
